--- a/config.gradle
+++ b/config.gradle
@@ -5,5 +5,5 @@ ext {
     targetSdkVersion = 28
     versionCode = 10
     versionName = "2.0.0"
-    supportVersion = '28.0.0'
+    supportVersion = "28.0.0"
 }
